--- a/src/NeuzToys/NeuzToys/App.axaml
+++ b/src/NeuzToys/NeuzToys/App.axaml
@@ -6,7 +6,14 @@
              xmlns:dt="clr-namespace:NeuzToys.DataTemplates"
              RequestedThemeVariant="Light">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceInclude Source="avares://NeuzToys.Shared/NeuzIcons.axaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
+    
     <Application.Styles>
         <semi:SemiTheme Locale="zh-CN" />
         <!-- 开启弹窗框动画 -->
