--- a/src/NeuzToys/NeuzToys/Views/MainWindow.axaml
+++ b/src/NeuzToys/NeuzToys/Views/MainWindow.axaml
@@ -9,8 +9,8 @@
               xmlns:vm="clr-namespace:NeuzToys.ViewModels"
               x:DataType="vm:MainWindowViewModel"
               WindowStartupLocation="CenterScreen"
-              Width="800"
-              Height="450"
+              Width="800" Height="600"
+              MinWidth="800" MinHeight="600"
               Icon="/Assets/logo.ico"
               Title="NeuzToys">
     <u:UrsaWindow.RightContent>
